Excluded various files from the bower-package

--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,9 @@
     "bower_components",
     "tests",
     "examples",
-    "docs"
+    "docs",
+    "TODO.md",
+    "Gruntfile.js"
   ],
   "dependencies": {
     "requirejs": "~2.1.11",
