Replaced jsdox by jsdoc-to-markdown (jsdoc2md)

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "grunt-contrib-jshint": "latest",
     "grunt-contrib-watch": "latest",
     "grunt-contrib-qunit": "latest",
-    "grunt-jsdox": "latest",
-    "grunt-contrib-requirejs": "~0.4.4"
+    "grunt-contrib-requirejs": "~0.4.4",
+    "grunt-exec": "~0.4.5"
   }
 }
