--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "grunt-contrib-jshint": "latest",
     "grunt-contrib-watch": "latest",
     "grunt-contrib-qunit": "latest",
-    "grunt-contrib-requirejs": "~0.4.4",
-    "grunt-exec": "~0.4.5"
+    "grunt-contrib-requirejs": "latest",
+    "grunt-jsdoc-to-markdown": "latest"
   }
 }
