Updated eslint & jscs + code accordingly (grunt command now runs without errors)

--- a/package.json
+++ b/package.json
@@ -33,9 +33,8 @@
   },
   "devDependencies": {
     "grunt": "latest",
-    "grunt-contrib-jshint": "latest",
-    "grunt-contrib-watch": "latest",
-    "grunt-contrib-qunit": "latest",
+    "grunt-eslint": "latest",
+    "grunt-jscs": "latest",
     "grunt-contrib-requirejs": "latest",
     "grunt-jsdoc-to-markdown": "latest"
   }
