Added browserify/famousify support + bump to v0.0.9

--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "name": "famous-map",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "homepage": "https://github.com/IjzerenHein/famous-map",
   "repository": {
     "type": "git",
     "url": "git://github.com/IjzerenHein/famous-map.git"
+  },
+  "browserify": {
+    "transform": [
+      "deamdify",
+      "famousify",
+      "brfs"
+    ]
   },
   "author": {
     "name": "Hein Rutjes <hrutjes@gmail.com>"
@@ -36,6 +43,10 @@
     "node": ">= 0.10.0"
   },
   "devDependencies": {
+    "brfs": "latest",
+    "browserify": "latest",
+    "deamdify": "latest",
+    "famousify": "latest",
     "grunt": "latest",
     "grunt-eslint": "latest",
     "grunt-jscs": "latest",
