--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "famous-map",
-  "version": "0.1.0",
+  "version": "0.3.0",
   "homepage": "https://github.com/IjzerenHein/famous-map",
   "repository": {
     "type": "git",
@@ -37,10 +37,15 @@
     "node": ">= 0.10.0"
   },
   "devDependencies": {
+    "browserify": "^10.0.0",
+    "browserify-shim": "^3.8.6",
     "grunt": "latest",
+    "grunt-banner": "^0.3.1",
+    "grunt-browserify": "^3.8.0",
+    "grunt-contrib-requirejs": "^0.4.4",
+    "grunt-contrib-uglify": "^0.9.1",
     "grunt-eslint": "latest",
     "grunt-jscs": "latest",
-    "grunt-contrib-requirejs": "latest",
     "grunt-jsdoc-to-markdown": "latest"
   },
   "files": [
@@ -51,5 +56,16 @@
     "MapUtility.js",
     "MapView.js",
     "LICENSE"
-  ]
+  ],
+  "browserify": {
+    "transform": [
+      "deamdify"
+    ]
+  },
+  "browserify-shim": {
+    "famous/core/View": "global:famous.core.View",
+    "famous/core/Surface": "global:famous.core.Surface",
+    "famous/core/Transform": "global:famous.core.Transform",
+    "famous/transitions/Transitionable": "global:famous.transitions.Transitionable"
+  }
 }
