--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "famous-map",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "homepage": "https://github.com/IjzerenHein/famous-map",
   "repository": {
     "type": "git",
@@ -9,7 +9,7 @@
   "author": {
     "name": "Hein Rutjes <hrutjes@gmail.com>"
   },
-  "description": "Map integration for Famo.us (google-maps, leaflet & open-layers)",
+  "description": "Map integration for Famo.us (google-maps, leaflet, open-layers & mapboxgl)",
   "keywords": [
     "famo.us",
     "famous",
@@ -21,7 +21,8 @@
     "leafletjs",
     "openlayers",
     "openstreetmap",
-    "mapbox"
+    "mapbox",
+    "mapboxgl"
   ],
   "licenses": [
     {
@@ -39,6 +40,7 @@
   "devDependencies": {
     "browserify": "^10.0.0",
     "browserify-shim": "^3.8.6",
+    "deamdify": "^0.1.1",
     "grunt": "latest",
     "grunt-banner": "^0.3.1",
     "grunt-browserify": "^3.8.0",
@@ -67,7 +69,7 @@
     ]
   },
   "browserify-shim": {
-    "famous/core/View": "global:famous.core.View",
+    "famous/views/SizeAwareView": "global:famous.views.SizeAwareView",
     "famous/core/Surface": "global:famous.core.Surface",
     "famous/core/Transform": "global:famous.core.Transform",
     "famous/transitions/Transitionable": "global:famous.transitions.Transitionable"
